terraform/codecamp-terrafrom/webserver-project/webserver.tf
provider "aws" {
  region     = "us-east-1"
  access_key = "AKIAY6NQTFFT7KLT4C4V"
  secret_key = "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"
}

#1 . create vpc
resource "aws_vpc" "syler-vpc" {
  cidr_block       = "10.0.0.0/16"
  tags = {
    Name = "syler-prod"
  }
}

#2 . Create internet Gateway

resource "aws_internet_gateway" "gw" {
  vpc_id = "${aws_vpc.syler-vpc.id}"
}

#3 . Create  Custom Route table

resource "aws_route_table" "prod-route-table" {
  vpc_id = "${aws_vpc.syler-vpc.id}"

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.gw.id}"
  }

  route {
    ipv6_cidr_block        = "::/0"
    gateway_id = "${aws_internet_gateway.gw.id}"
  }

  tags = {
    Name = "Prod"
  }
}

#4 . Create a subnet
resource "aws_subnet" "subnet-1" {
  vpc_id     = "${aws_vpc.syler-vpc.id}"
  cidr_block = "10.0.1.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "syler-prod-subnet"
  }
}

#5 . Associate Route table 

resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.subnet-1.id
  route_table_id = aws_route_table.prod-route-table.id
}


#6. Create SG to allow 22 , 80 , 443 

resource "aws_security_group" "allow_web" {
  name        = "allow_web_traffic"
  description = "Allow web traffic"
  vpc_id      = "${aws_vpc.syler-vpc.id}"

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_web"
  }
}

#7 Add a Network Interface

resource "aws_network_interface" "web-server-nic" {
  subnet_id       = "${aws_subnet.subnet-1.id}"
  private_ips     = ["10.0.1.50"]
  security_groups = ["${aws_security_group.allow_web.id}"]
}

#8 Assign A EIP

resource "aws_eip" "one" {
  vpc                       = true
  network_interface         = "${aws_network_interface.web-server-nic.id}"
  associate_with_private_ip = "10.0.1.50"
  depends_on                = [aws_internet_gateway.gw]
}

#9 . Create a ubuntu server and install a apache webserver.

resource "aws_instance" "web-server-instance" {
  ami           = "ami-0ac80df6eff0e70b5"
  instance_type = "t2.micro"
  availability_zone = "us-east-1a"
  key_name          = "syler-key"

network_interface {
    device_index = 0
    network_interface_id = aws_network_interface.web-server-nic.id
}

user_data = <<-EOF
            #!/bin/bash
            sudo apt update -y
            sudo apt install apache2 -y
            sudo systemctl start apache2
            sudo bash -c ' First Webserver on AWS by Terraform  > /var/www/html/index.html '
            EOF
    tags = {
        Name = "web-server"
    }

}
